--- a/projects/ngx-audio-wave/src/lib/ngx-audio-wave.html
+++ b/projects/ngx-audio-wave/src/lib/ngx-audio-wave.html
@@ -2,19 +2,31 @@
        [src]="audioSrc()"></audio>
 
 <div [style.--ngx-audio-wave-color]="color()"
-     class="ngx-audio-wave-wrapper">
+     class="ngx-audio-wave-wrapper"
+     [attr.aria-label]="ariaLabel() || 'Audio player'"
+     role="region">
   @if (!hasError()) {
     @if (!hideBtn()) {
       @if (isPaused()) {
-        <button class="ngx-audio-wave-btn" (click)="play()">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+        <button
+          class="ngx-audio-wave-btn"
+          (click)="play()"
+          [attr.aria-label]="playButtonLabel()"
+          [attr.aria-pressed]="false"
+          type="button">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" aria-hidden="true">
             <path
               d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"/>
           </svg>
         </button>
       } @else {
-        <button class="ngx-audio-wave-btn" (click)="pause()">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+        <button
+          class="ngx-audio-wave-btn"
+          (click)="pause()"
+          [attr.aria-label]="pauseButtonLabel()"
+          [attr.aria-pressed]="true"
+          type="button">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" aria-hidden="true">
             <path
               d="M5.5 3.5A1.5 1.5 0 0 1 7 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5zm5 0A1.5 1.5 0 0 1 12 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5z"/>
           </svg>
@@ -22,11 +34,22 @@
       }
     }
 
-    <div class="ngx-audio-wave" [style.height.px]="height()" [style.width.px]="width()">
+    <div class="ngx-audio-wave"
+         [style.height.px]="height()"
+         [style.width.px]="width()"
+         role="progressbar"
+         [attr.aria-label]="progressBarLabel()"
+         [attr.aria-valuenow]="exactPlayedPercent()"
+         [attr.aria-valuemin]="0"
+         [attr.aria-valuemax]="100"
+         [attr.aria-valuetext]="progressText()"
+         tabindex="0"
+         (click)="setTime($event)"
+         (keydown)="onKeyDown($event)">
       @if (!isLoading()) {
-        <svg (click)="setTime($event)"
-             [attr.viewBox]="`0 0 ${width()} ${height()}`"
-             class="real">
+        <svg [attr.viewBox]="`0 0 ${width()} ${height()}`"
+             class="real"
+             aria-hidden="true">
           @for (rect of normalizedData(); track rect; let index = $index) {
             <rect
               [attr.height]="rect * height()"
@@ -40,7 +63,7 @@
         </svg>
 
         <div class="fake" [style.clip-path]="clipPath()">
-          <svg [attr.viewBox]="`0 0 ${width()} ${height()}`">
+          <svg [attr.viewBox]="`0 0 ${width()} ${height()}`" aria-hidden="true">
             @for (rect of normalizedData(); track rect; let index = $index) {
               <rect
                 [attr.height]="rect * height()"
@@ -54,14 +77,21 @@
           </svg>
         </div>
       } @else {
-        <div class="ngx-audio-wave-loading">
+        <div class="ngx-audio-wave-loading" role="status" aria-label="Loading audio">
           <span></span>
           <span></span>
           <span></span>
         </div>
       }
     </div>
+
+    <!-- Live region for screen readers -->
+    <div aria-live="polite" aria-atomic="true" class="ngx-audio-wave-sr-only">
+      {{ statusText() }}
+    </div>
   } @else {
-    Some errors occurred
+    <div role="alert" aria-label="Audio loading error">
+      Some errors occurred
+    </div>
   }
 </div>
